// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardContainer Component that it renders without crashing 1`] = `
<div
  className="card-container"
>
  <h1>
     Loading... 
  </h1>
</div>
`;

exports[`CardContainer Component that the cards render accordingly when state changes/new props are received 1`] = `
<div
  className="card-container"
>
  <Component
    Name="Luke Skywalker"
    handleClick={[Function]}
    id="Luke Skywalker"
    key="Luke Skywalker0"
  />
</div>
`;

exports[`CardContainer Component that the cards render accordingly when state changes/new props are received 2`] = `
<div
  className="card-container"
>
  <Component
    Name="Tatooine"
    Population="200000"
    Residents={
      Array [
        "undefined ",
        "undefined ",
      ]
    }
    Terrain="desert"
    handleClick={[Function]}
    id="Tatooine"
    key="Tatooine0"
  />
</div>
`;
